# BadgerTutors

./: .dockerignore  .env  .gitignore  Anchor.toml  Cargo.toml  DATABASE_SETUP_GUIDE.md  DOCKER_SETUP.md  Dockerfile  INSTALL_WINDOWS.md  README.md  SECURITY_IMPLEMENTATION_GUIDE.md  SETUP.md  add_fake_tutors.sql  complete_setup_fixed.sql  docker-compose.yml  index.html  install-solana-windows.ps1  lib.rs  package-lock.json  setup.ps1  tailwind.config.ts  tsconfig.node.json
backend/: .gitignore  Anchor.toml  Cargo.toml  README.md  SETUP.md  package-lock.json  package.json  tsconfig.json
backend/contracts/: TutorManager.sol  TutorSession.sol
backend/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
backend/ignition/deployments/chain-11155111/artifacts/: TutorModule#TutorManager.json
backend/ignition/deployments/chain-11155111/build-info/: solc-0_8_28-b680486ae599fc3bdd6296b4344c4ff8ac869258.json
backend/ignition/modules/: BadgerTutor.ts
backend/lib/: idl.ts  index.ts
backend/programs/badger-tutors/: Cargo.toml
backend/programs/badger-tutors/src/: lib.rs
badger-tutor-backend/: Cargo.toml
badger-tutor-backend/src/: lib.rs  main.rs
client/: package.json  tsconfig.json
client/src/: index.ts
programs/badger-tutors/: Cargo.toml
programs/badger-tutors/src/: lib.rs
src/: App.tsx  index.css
src/components/: Header.tsx  ReviewDialog.tsx  SessionConfirmationDialog.tsx  TutorReviewButton.tsx
src/contexts/: AuthContext.tsx  (+1 more)
supabase/: config.toml
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
(+31 files in other folders)
