[package]
name = "badger-tutors"
version = "0.1.0"
description = "Solana smart contract for BadgerTutors escrow and rating system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "badger_tutors"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

