[package]
name = "badger-tutors"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "badger_tutors"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "no-idl"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

